# obsidian-local-speech-to-text

./: .gitignore  AGENTS.md  BUGS.md  CODE_REVIEW.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PLANS.md  PROBLEM.md  README.md  biome.json  build_output.txt  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  timeline.md  tsconfig.json  versions.json  vitest.config.ts
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.md  ai-task.md  bug-report.yml  design-discussion.yml  discussion.md  feature-request.yml
.github/workflows/: ci.yml  release.yml
code_review/: README.md  code-review-1.md  code_review_2.md
config/: model-catalog.json
docs/: CODE_REVIEW.md  backlog.md  canary-plan.md  decisions.md  lessons.md  linux-flatpak-gpu-setup.md  macos.md  pipeline-architecture.md  platform-runtime-dependencies.md  release-planning.md  system-architecture.md
docs/architecture/: pipeline-architecture.md  platform-runtime-dependencies.md  system-architecture.md
docs/archive/: decisions-superseded.md  release-planning.md
docs/guides/: linux-flatpak-gpu-setup.md  windows-cuda-setup.md
docs/release/: platform-runtime-dependencies.md  release-planning.md
native/: Cargo.toml  catalog.json  cuda-artifacts.json
native/models/: silero_vad.provenance.json
native/sidecar/: Cargo.toml
native/sidecar/src/: app.rs  capabilities.rs  catalog.rs  cohere.rs  installer.rs  lib.rs  main.rs  mel.rs  model_store.rs  protocol.rs  session.rs  transcription.rs  worker.rs
native/sidecar/tests/: protocol_smoke.rs
native/src/: app.rs  audio_metadata.rs  catalog.rs  cohere.rs  installer.rs  lib.rs  main.rs  model_store.rs  panic_util.rs  protocol.rs  session.rs  transcription.rs  vad.rs  worker.rs
native/src/adapters/: cohere_transcribe.rs  mod.rs  whisper.rs
native/src/engine/: capabilities.rs  mod.rs  registry.rs  traits.rs
native/src/runtimes/: mod.rs  onnx.rs  whisper_cpp.rs
native/src/stages/: consts.rs  diagnostics.rs  hallucination_filter.rs  llm_transform.rs  mod.rs  noop.rs  punctuation.rs
native/tests/: registry_smoke.rs
scripts/: assemble-release-files.d.mts  assemble-release-files.mjs  build-cpu.sh  build-cuda.ps1  build-cuda.sh  build-metal.sh  build-plugin.sh  build-sidecar.mjs  check-rust.mjs  check-rust.sh  flatpak-cuda-wrapper.sh  install-dev-plugin.mjs  linux_cuda_build.sh  list-cuda-artifacts.mjs  package-sidecar-archive.mjs  read-release-version.mjs  verify-build-output.mjs
scripts/lib/: cuda-artifacts.mjs
src/: main.ts
src/audio/: audio-capture-stream.ts  microphone-recorder.ts  pcm-frame-processor.ts  pcm-recorder-worklet-shared.ts  pcm-recorder-worklet-source.ts  pcm-recorder.worklet.ts  temp-audio-file.ts  wav-encoder.ts
src/commands/: register-commands.ts
src/dictation/: dictation-controller.ts  dictation-session-controller.ts  shortcut-matcher.ts
src/editor/: dictation-anchor-extension.ts  editor-service.ts  insert-selection-text.ts  note-surface.ts  transcript-placement.ts
src/filesystem/: path-validation.ts
src/llm/: ollama-client.ts
src/models/: capability-view.ts  feature-flags.ts  manage-models-modal.ts  model-install-manager.ts  model-install-progress.ts  model-management-modals.ts  model-management-service.ts  model-management-types.ts  model-row-state.ts
src/session/: session-journal.ts  session.ts
src/settings/: acceleration-info.ts  model-settings-section.ts  plugin-settings.ts  settings-normalization.ts  settings-tab.ts
src/setup/: first-run-gate.ts  first-run-setup-modal.ts  sidecar-install-copy.ts  sidecar-install-modal.ts
src/shared/: error-utils.ts  format-utils.ts  pcm-format.ts  plugin-logger.ts
src/sidecar/: gpu-precheck.ts  protocol.ts  sidecar-build-state.ts  sidecar-client.ts  sidecar-connection.ts  sidecar-executable.ts  sidecar-installer.ts  sidecar-logging.ts  sidecar-paths.ts  sidecar-process.ts
src/transcript/: renderer.ts
src/ui/: dictation-ribbon.ts  local-transcript-view.ts  status-bar.ts
test/: assemble-release-files.test.ts  capability-view.test.ts  dictation-anchor-extension.test.ts  dictation-controller.test.ts  dictation-ribbon.test.ts  dictation-session-controller.test.ts  editor-service.test.ts  first-run-gate.test.ts  gpu-precheck.test.ts  model-install-manager.test.ts  model-install-progress.test.ts  model-management-service.test.ts  model-management-types.test.ts  model-row-state.test.ts  note-surface.test.ts  pcm-frame-processor.test.ts  plugin-settings.test.ts  protocol.test.ts  register-commands.test.ts  session-journal.test.ts  session.test.ts  settings-normalization.test.ts  settings-tab.test.ts  sidecar-build-state.test.ts  sidecar-installer.test.ts  sidecar-logging.test.ts  sidecar-paths.test.ts  temp-audio-file.test.ts  transcript-placement.test.ts  transcript-renderer.test.ts  wav-encoder.test.ts
test/__mocks__/: obsidian.ts
test/fixtures/: catalog.ts  transcript.ts
(+3 files in other folders)
