[package]
name = "obsidian-local-stt-sidecar"
version = "2026.4.21"
edition = "2024"
license = "MIT"
rust-version = "1.94.1"

[lib]
name = "obsidian_local_stt_sidecar"
path = "src/lib.rs"

[[bin]]
name = "obsidian-local-stt-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
directories = "6.0"
ndarray = "0.17"
half = { version = "2", optional = true, features = ["num-traits"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "copy-dylibs", "ndarray", "tls-rustls"] }
realfft = { version = "3.5", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tokio = { version = "1.52", features = ["macros", "rt", "sync"] }
whisper-rs = "0.16.0"

[features]
default = ["engine-whisper"]
engine-whisper = []
engine-cohere-transcribe = ["half", "ort/half", "realfft"]
gpu-metal = ["whisper-rs/metal"]
gpu-cuda = ["whisper-rs/cuda"]
gpu-ort-cuda = ["engine-cohere-transcribe", "ort/cuda"]
