[package]
name = "obsidian-local-stt-sidecar"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94.1"

[lib]
name = "obsidian_local_stt_sidecar"
path = "src/lib.rs"

[[bin]]
name = "obsidian-local-stt-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
hound = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whisper-rs = "0.16.0"
