[package]
name = "obsidian-local-stt-sidecar"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94.1"

[lib]
name = "obsidian_local_stt_sidecar"
path = "src/lib.rs"

[[bin]]
name = "obsidian-local-stt-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
directories = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
webrtc-vad = "0.4.0"
whisper-rs = "0.16.0"

[features]
default = []
gpu-metal = ["whisper-rs/metal"]
gpu-cuda = ["whisper-rs/cuda"]
