[package]
name = "obsidian-local-stt-sidecar"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94.1"

[lib]
name = "obsidian_local_stt_sidecar"
path = "src/lib.rs"

[[bin]]
name = "obsidian-local-stt-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
directories = "6.0"
ndarray = { version = "0.17", optional = true }
half = { version = "2", optional = true, features = ["num-traits"] }
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false, features = ["std", "download-binaries", "copy-dylibs", "half", "ndarray", "tls-rustls"] }
realfft = { version = "3.5", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "rt", "sync"] }
webrtc-vad = "0.4.0"
whisper-rs = "0.16.0"

[features]
default = []
engine-cohere = ["half", "ort", "ndarray", "realfft"]
gpu-metal = ["whisper-rs/metal"]
gpu-cuda = ["whisper-rs/cuda"]
gpu-ort-cuda = ["engine-cohere", "ort/cuda"]
